Document configuration values which have been renamed.

--- a/mkdocs_inspircd/templates/module.md.j2
+++ b/mkdocs_inspircd/templates/module.md.j2
@@ -51,7 +51,15 @@ To load this module use the following `<module>` tag:
 <tbody markdown="1">
 {% for attr in tag.attributes %}
 <tr markdown="1">
+{% if attr.name is string %}
 <td markdown="1">{{attr.name}}</td>
+{% else %}
+<td markdown="1">
+{% for name, version in attr.name.items() %}
+{{name }} *({{version}})*{% if not loop.last %}<br>{% endif %}
+{% endfor %}
+</td>
+{% endif %}
 <td markdown="1">{{attr.type}}</td>
 <td markdown="1">{% if attr.default is none %}<em>None</em>{% else %}{{attr.default}}{% endif %}</td>
 <td markdown="1">{% if attr.added %}<a href="/{{ attr.added|first }}/change-log/#inspircd-{{ attr.added|replace(".", "") }}"><strong>New in v{{ attr.added }}!</strong></a> {% endif %}{% if attr.required %}<strong>Required!</strong> {% endif %}{{attr.description}}</td>
