Document the config changes in the latest v4 release.

--- a/mkdocs_inspircd/templates/module.md.j2
+++ b/mkdocs_inspircd/templates/module.md.j2
@@ -77,6 +77,9 @@ To load this module use the following `<module>` tag:
 
 {% if tag.added_values %}
 {# typically to extend `<class:privs>` #}
+{% if tag.values_description %}
+{{ tag.values_description }}
+{% endif %}
 <table markdown="1">
 <thead>
 <tr>
